# cpp-template

./: .gitignore  CMakeLists.txt  README.md  configure
include/: lib.hpp
src/: lib.cpp  main.cpp
tests/: lib.test.cpp
